k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ad-server
  labels:
    app: ad-server
  annotations:
    sidecar.opentelemetry.io/inject: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ad-server
  template:
    metadata:
      name: ad-server
      labels:
        app: ad-server
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      containers:
        - name: ad-server
          image: ghcr.io/eason0729/ad-server/backend:staging
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: web
              protocol: TCP
          resources:
            limits:
              cpu: 1.5
              memory: 1Gi
            requests:
              cpu: 1.5
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              scheme: HTTP
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ad-server
  labels:
    app: ad-server
spec:
  selector:
    app: ad-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ad-server
  annotations:
    spec.ingressClassName: public
spec:
  rules:
    - host: ad-server.local
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: ad-server
              port:
                number: 3000
